compiler/tests/success/x86-64/cast_msb_clear.jazz
export fn add32_ext (reg u32 a) -> reg u64 {
  reg u64 b;
  ?{}, b = (64u)#ADD_32(a, 1);
  return b;
}
