compiler/tests/fail/typing/x86-64/lval_mismatch.jazz
export fn f () -> reg u64 {
  reg u64 res = 0;
  reg bool b;
  ?{}, b = #ADD(res, res);
  res = b ? 1 : 0;
  return res;
}
